No Bug, aligned personal sesction and waffle diagram

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -167,6 +167,7 @@ body {
   .personal-story__grid {
     grid-template-columns: 1fr 1fr;
     gap: 5rem;
+    align-items: start;
   }
 }
 
